test/files/pos/bug177.scala
class A {
  def foo = {
    object Y {
      def bar = 1;
    }
    Y.bar
  }
}
