test/files/neg/macro-nontree/Macros_1.scala
object Macros {
  def macro foo = 2
}